--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
             type="text/css"
             href="{% static 'style.css' %}"
         />
-        <title>Hello, pybo!</title>
+        <title>mysite</title>
     </head>
     <body>
         <!-- 네비게이션바 -->
